<resources>
    <string name="app_name">MoMeMo</string>
    <string name="title_activity_maps">Map</string>

    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="stop">STOP</string>
    <string name="resume">RESUME</string>

    <string name="pm10">PM10</string>
    <string name="pm25">PM2.5</string>
    <string name="pm1">PM1.0</string>
    
    <string name="ch4">CH4</string>
    <string name="co2">CO2</string>


    <string-array name="deviceID">
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

    <string name="picker">STARTING DATE</string>

    <string name="temperature">TEMPERATURE</string>
    <string name="humidity">HUMIDITY</string>
    <string name="pressure">PRESSURE</string>

    <string name="windSpeed">Wind spd</string>
    <string name="windDir">Wind dir</string>
    <string name="speed">Speed</string>

    <string name="title_activity_splash">MoMeMoApp</string>

    <string-array name="deviceId">
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

    <string-array name="deviceIdValues">
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

    <string-array name="about">

    </string-array>

    <string-array name="aboutV">

    </string-array>

    <string name="preference_file_key">preference_file</string>


</resources>
